# rocgputreeshap-glog-fork

./: .gitmodules  CMakeLists.txt  build.sh
.github/workflows/: glog.yml
.glog/: glog-scan.sarif
GPUTreeShap/: amd_warp_primitives.h  gpu_treeshap.h
benchmark/: benchmark_gpu_treeshap.cxx
example/: Makefile  README.md  example.cxx
tests/: test_gpu_treeshap.cxx  test_utils.h
